// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deliveries, flag off and not the owner account: the screen is what it was before the lane a. the whole screen 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ECEDE9",
        "flex": 1,
      },
      {
        "paddingTop": 16,
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
        "paddingBottom": 10,
        "paddingHorizontal": 8,
      }
    }
  >
    <View
      accessibilityLabel="Back"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={12}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "height": 40,
          "justifyContent": "center",
          "opacity": 1,
          "width": 40,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={22}
        bbWidth={22}
        fill="none"
        focusable={false}
        height={22}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#2B3038"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={1.75}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 22,
              "width": 22,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={22}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281020472,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        >
          <RNSVGPath
            d="m15 18-6-6 6-6"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4281020472,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.75}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "rgba(43,48,56,0.72)",
            "fontFamily": "JetBrainsMono_400Regular",
            "fontSize": 12,
            "letterSpacing": 0.8,
            "lineHeight": 16,
          }
        }
      >
        Deliveries · MAGE ID
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#2B3038",
            "fontFamily": "Barlow_600SemiBold",
            "fontSize": 22,
            "letterSpacing": 0,
            "lineHeight": 28,
          }
        }
      >
        Harlow Residence — kitchen + primary suite
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "rgba(43,48,56,0.78)",
            "fontSize": 12,
            "marginTop": 1,
          }
        }
      >
        1 delivery is late
      </Text>
    </View>
    <View
      accessibilityLabel="It's here now. Log a delivery that just arrived"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={6}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(47,107,58,0.12)",
          "borderColor": "#2F6B3A40",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 6,
          "marginRight": 6,
          "minHeight": 40,
          "opacity": 1,
          "paddingHorizontal": 12,
        }
      }
      testID="deliveries-arrived"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        fill="none"
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#2C6436"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={1.9}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281099318,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.9}
        >
          <RNSVGPath
            d="m16 16 2 2 4-4"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4281099318,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.9}
          />
          <RNSVGPath
            d="M21 10V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l2-1.14"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4281099318,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.9}
          />
          <RNSVGPath
            d="m7.5 4.27 9 5.15"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4281099318,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.9}
          />
          <RNSVGPath
            d="M3.29 7 12 12 20.71 7"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4281099318,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.9}
          />
          <RNSVGLine
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4281099318,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.9}
            x1="12"
            x2="12"
            y1="22"
            y2="12"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        style={
          {
            "color": "#2C6436",
            "fontSize": 13,
            "fontWeight": "700",
          }
        }
      >
        Here Now
      </Text>
    </View>
    <View
      accessibilityLabel="Add Delivery"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#2F6B3A",
          "borderRadius": 10,
          "height": 40,
          "justifyContent": "center",
          "opacity": 1,
          "width": 40,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={18}
        bbWidth={18}
        fill="none"
        focusable={false}
        height={18}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#FFFFFF"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={1.75}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 18,
              "width": 18,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={18}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        >
          <RNSVGPath
            d="M5 12h14"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.75}
          />
          <RNSVGPath
            d="M12 5v14"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.75}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      [
        {
          "gap": 10,
          "padding": 16,
        },
        {
          "paddingBottom": 150,
        },
      ]
    }
    onScroll={[Function]}
    scrollEventThrottle={16}
  >
    <View>
      <Text
        style={
          [
            {
              "fontFamily": "JetBrainsMono_400Regular",
              "fontSize": 12,
              "letterSpacing": 1,
              "lineHeight": 16,
              "marginTop": 4,
              "textTransform": "uppercase",
            },
            {
              "color": "#C84038",
            },
          ]
        }
      >
        1
         late
      </Text>
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#D7DAD4",
            "borderRadius": 14,
            "borderWidth": 1,
            "gap": 6,
            "padding": 14,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "baseline",
              "flexDirection": "row",
              "gap": 10,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#2B3038",
                "flex": 1,
                "fontSize": 14,
                "fontWeight": "700",
              }
            }
          >
            Roof Trusses
          </Text>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "700",
                },
                {
                  "color": "#C84038",
                },
              ]
            }
          >
            3 days late
          </Text>
        </View>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "rgba(43,48,56,0.72)",
              "fontSize": 12,
            }
          }
        >
          Kessler Lumber Yard
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 8,
              "marginTop": 4,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderColor": "#D7DAD4",
                "borderRadius": 10,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 5,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 7,
              }
            }
            testID="confirm-dddddddd-0000-4000-8000-000000000001"
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={13}
              bbWidth={13}
              fill="none"
              focusable={false}
              height={13}
              meetOrSlice={0}
              minX={0}
              minY={0}
              stroke="rgba(43,48,56,0.78)"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={2}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 13,
                    "width": 13,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={13}
              xmlns="http://www.w3.org/2000/svg"
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 3341496376,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={2}
              >
                <RNSVGPath
                  d="M20 6 9 17l-5-5"
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 3341496376,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <Text
              style={
                {
                  "color": "rgba(43,48,56,0.78)",
                  "fontSize": 12,
                  "fontWeight": "700",
                }
              }
            >
              Confirm
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(47,107,58,0.12)",
                "borderColor": "#2F6B3A40",
                "borderRadius": 10,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 5,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 7,
              }
            }
            testID="receive-dddddddd-0000-4000-8000-000000000001"
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={13}
              bbWidth={13}
              fill="none"
              focusable={false}
              height={13}
              meetOrSlice={0}
              minX={0}
              minY={0}
              stroke="#2C6436"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={2}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 13,
                    "width": 13,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={13}
              xmlns="http://www.w3.org/2000/svg"
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4281099318,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={2}
              >
                <RNSVGPath
                  d="M14 18V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2"
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4281099318,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                />
                <RNSVGPath
                  d="M15 18H9"
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4281099318,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                />
                <RNSVGPath
                  d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14"
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4281099318,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                />
                <RNSVGCircle
                  cx="17"
                  cy="18"
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  r="2"
                  stroke={
                    {
                      "payload": 4281099318,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                />
                <RNSVGCircle
                  cx="7"
                  cy="18"
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  r="2"
                  stroke={
                    {
                      "payload": 4281099318,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <Text
              style={
                [
                  {
                    "color": "rgba(43,48,56,0.78)",
                    "fontSize": 12,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#2C6436",
                  },
                ]
              }
            >
              Received
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 8,
            "marginBottom": 2,
            "marginTop": 14,
          }
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(47,107,58,0.12)",
              "borderColor": "#2F6B3A",
              "borderRadius": 10,
              "borderWidth": 1,
              "flex": 1,
              "opacity": 1,
              "paddingVertical": 9,
            }
          }
          testID="deliveries-horizon-7"
        >
          <Text
            style={
              [
                {
                  "color": "rgba(43,48,56,0.78)",
                  "fontSize": 13,
                  "fontWeight": "600",
                },
                {
                  "color": "#2C6436",
                },
              ]
            }
          >
            7
             days
          </Text>
        </View>
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderColor": "#D7DAD4",
              "borderRadius": 10,
              "borderWidth": 1,
              "flex": 1,
              "opacity": 1,
              "paddingVertical": 9,
            }
          }
          testID="deliveries-horizon-14"
        >
          <Text
            style={
              [
                {
                  "color": "rgba(43,48,56,0.78)",
                  "fontSize": 13,
                  "fontWeight": "600",
                },
                false,
              ]
            }
          >
            14
             days
          </Text>
        </View>
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderColor": "#D7DAD4",
              "borderRadius": 10,
              "borderWidth": 1,
              "flex": 1,
              "opacity": 1,
              "paddingVertical": 9,
            }
          }
          testID="deliveries-horizon-28"
        >
          <Text
            style={
              [
                {
                  "color": "rgba(43,48,56,0.78)",
                  "fontSize": 13,
                  "fontWeight": "600",
                },
                false,
              ]
            }
          >
            28
             days
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#D7DAD4",
            "borderRadius": 14,
            "borderWidth": 1,
            "gap": 6,
            "padding": 14,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "baseline",
              "flexDirection": "row",
              "gap": 10,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#2B3038",
                "flex": 1,
                "fontSize": 14,
                "fontWeight": "700",
              }
            }
          >
            14 Windows
          </Text>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "700",
                },
                {
                  "color": "#2C6436",
                },
              ]
            }
          >
            Due in 2d, not confirmed
          </Text>
        </View>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "rgba(43,48,56,0.72)",
              "fontSize": 12,
            }
          }
        >
          Northside Glass
           · 07:00-11:00
           · PO 1042
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 8,
              "marginTop": 4,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderColor": "#D7DAD4",
                "borderRadius": 10,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 5,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 7,
              }
            }
            testID="confirm-dddddddd-0000-4000-8000-000000000002"
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={13}
              bbWidth={13}
              fill="none"
              focusable={false}
              height={13}
              meetOrSlice={0}
              minX={0}
              minY={0}
              stroke="rgba(43,48,56,0.78)"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={2}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 13,
                    "width": 13,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={13}
              xmlns="http://www.w3.org/2000/svg"
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 3341496376,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={2}
              >
                <RNSVGPath
                  d="M20 6 9 17l-5-5"
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 3341496376,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <Text
              style={
                {
                  "color": "rgba(43,48,56,0.78)",
                  "fontSize": 12,
                  "fontWeight": "700",
                }
              }
            >
              Confirm
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(47,107,58,0.12)",
                "borderColor": "#2F6B3A40",
                "borderRadius": 10,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 5,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 7,
              }
            }
            testID="receive-dddddddd-0000-4000-8000-000000000002"
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={13}
              bbWidth={13}
              fill="none"
              focusable={false}
              height={13}
              meetOrSlice={0}
              minX={0}
              minY={0}
              stroke="#2C6436"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={2}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 13,
                    "width": 13,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={13}
              xmlns="http://www.w3.org/2000/svg"
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4281099318,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={2}
              >
                <RNSVGPath
                  d="M14 18V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2"
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4281099318,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                />
                <RNSVGPath
                  d="M15 18H9"
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4281099318,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                />
                <RNSVGPath
                  d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14"
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4281099318,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                />
                <RNSVGCircle
                  cx="17"
                  cy="18"
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  r="2"
                  stroke={
                    {
                      "payload": 4281099318,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                />
                <RNSVGCircle
                  cx="7"
                  cy="18"
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  r="2"
                  stroke={
                    {
                      "payload": 4281099318,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <Text
              style={
                [
                  {
                    "color": "rgba(43,48,56,0.78)",
                    "fontSize": 12,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#2C6436",
                  },
                ]
              }
            >
              Received
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#D7DAD4",
            "borderRadius": 14,
            "borderWidth": 1,
            "gap": 6,
            "padding": 14,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "baseline",
              "flexDirection": "row",
              "gap": 10,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#2B3038",
                "flex": 1,
                "fontSize": 14,
                "fontWeight": "700",
              }
            }
          >
            Flashing Tape and Sealant
          </Text>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "700",
                },
                {
                  "color": "rgba(43,48,56,0.78)",
                },
              ]
            }
          >
            Arriving in 5d
          </Text>
        </View>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "rgba(43,48,56,0.72)",
              "fontSize": 12,
            }
          }
        >
          Harbor Building Supply
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 8,
              "marginTop": 4,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(47,107,58,0.12)",
                "borderColor": "#2F6B3A40",
                "borderRadius": 10,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 5,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 7,
              }
            }
            testID="receive-dddddddd-0000-4000-8000-000000000003"
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={13}
              bbWidth={13}
              fill="none"
              focusable={false}
              height={13}
              meetOrSlice={0}
              minX={0}
              minY={0}
              stroke="#2C6436"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={2}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 13,
                    "width": 13,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={13}
              xmlns="http://www.w3.org/2000/svg"
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4281099318,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={2}
              >
                <RNSVGPath
                  d="M14 18V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2"
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4281099318,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                />
                <RNSVGPath
                  d="M15 18H9"
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4281099318,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                />
                <RNSVGPath
                  d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14"
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4281099318,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                />
                <RNSVGCircle
                  cx="17"
                  cy="18"
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  r="2"
                  stroke={
                    {
                      "payload": 4281099318,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                />
                <RNSVGCircle
                  cx="7"
                  cy="18"
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  r="2"
                  stroke={
                    {
                      "payload": 4281099318,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <Text
              style={
                [
                  {
                    "color": "rgba(43,48,56,0.78)",
                    "fontSize": 12,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#2C6436",
                  },
                ]
              }
            >
              Received
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderColor": "#D7DAD4",
            "borderRadius": 10,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "center",
            "marginTop": 6,
            "opacity": 1,
            "paddingVertical": 12,
          }
        }
        testID="deliveries-building-access"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={15}
          bbWidth={15}
          fill="none"
          focusable={false}
          height={15}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="rgba(43,48,56,0.78)"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1.8}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 15,
                "width": 15,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={15}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 3341496376,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.8}
          >
            <RNSVGPath
              d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 3341496376,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={1.8}
            />
            <RNSVGPath
              d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 3341496376,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={1.8}
            />
            <RNSVGPath
              d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 3341496376,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={1.8}
            />
            <RNSVGPath
              d="M10 6h4"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 3341496376,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={1.8}
            />
            <RNSVGPath
              d="M10 10h4"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 3341496376,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={1.8}
            />
            <RNSVGPath
              d="M10 14h4"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 3341496376,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={1.8}
            />
            <RNSVGPath
              d="M10 18h4"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 3341496376,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={1.8}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <Text
          style={
            {
              "color": "rgba(43,48,56,0.78)",
              "fontSize": 13,
              "fontWeight": "600",
            }
          }
        >
          Set Up Building Access
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Deliveries, flag off and not the owner account: the screen is what it was before the lane b. the Expecting a Delivery sheet 1`] = `
<View>
  <Text
    style={
      {
        "color": "rgba(43,48,56,0.78)",
        "fontSize": 13,
        "fontWeight": "600",
        "marginBottom": 6,
        "marginTop": 14,
      }
    }
  >
    What
  </Text>
  <TextInput
    onChangeText={[Function]}
    placeholder="14 windows, roof trusses…"
    placeholderTextColor="rgba(43,48,56,0.72)"
    style={
      {
        "backgroundColor": "#ECEDE9",
        "borderColor": "#D7DAD4",
        "borderRadius": 10,
        "borderWidth": 1,
        "color": "#2B3038",
        "fontSize": 15,
        "paddingHorizontal": 14,
        "paddingVertical": 12,
      }
    }
    testID="delivery-description"
    value=""
  />
  <Text
    style={
      {
        "color": "rgba(43,48,56,0.78)",
        "fontSize": 13,
        "fontWeight": "600",
        "marginBottom": 6,
        "marginTop": 14,
      }
    }
  >
    Supplier
  </Text>
  <TextInput
    onChangeText={[Function]}
    placeholder="Who is sending it"
    placeholderTextColor="rgba(43,48,56,0.72)"
    style={
      {
        "backgroundColor": "#ECEDE9",
        "borderColor": "#D7DAD4",
        "borderRadius": 10,
        "borderWidth": 1,
        "color": "#2B3038",
        "fontSize": 15,
        "paddingHorizontal": 14,
        "paddingVertical": 12,
      }
    }
    testID="delivery-supplier"
    value=""
  />
  <Text
    style={
      {
        "color": "rgba(43,48,56,0.78)",
        "fontSize": 13,
        "fontWeight": "600",
        "marginBottom": 6,
        "marginTop": 14,
      }
    }
  >
    Promised Date
  </Text>
  <View
    accessibilityLabel="Promised date Oct 14, 2026. Change"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ECEDE9",
        "borderColor": "#D7DAD4",
        "borderRadius": 10,
        "borderWidth": 1,
        "color": "#2B3038",
        "flexDirection": "row",
        "fontSize": 15,
        "gap": 8,
        "opacity": 1,
        "paddingHorizontal": 14,
        "paddingVertical": 12,
      }
    }
    testID="delivery-date"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={15}
      bbWidth={15}
      fill="none"
      focusable={false}
      height={15}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="rgba(43,48,56,0.78)"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={1.75}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 15,
            "width": 15,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={15}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 3341496376,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={1.75}
      >
        <RNSVGPath
          d="M8 2v4"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 3341496376,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
        <RNSVGPath
          d="M16 2v4"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 3341496376,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
        <RNSVGRect
          fill={null}
          height="18"
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          rx="2"
          stroke={
            {
              "payload": 3341496376,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
          width="18"
          x="3"
          y="4"
        />
        <RNSVGPath
          d="M3 10h18"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 3341496376,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
        <RNSVGPath
          d="M8 14h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 3341496376,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
        <RNSVGPath
          d="M12 14h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 3341496376,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
        <RNSVGPath
          d="M16 14h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 3341496376,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
        <RNSVGPath
          d="M8 18h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 3341496376,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
        <RNSVGPath
          d="M12 18h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 3341496376,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
        <RNSVGPath
          d="M16 18h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 3341496376,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        {
          "color": "#2B3038",
          "fontSize": 15,
        }
      }
    >
      Wed, Oct 14
    </Text>
  </View>
  <Text
    style={
      {
        "color": "rgba(43,48,56,0.78)",
        "fontSize": 13,
        "fontWeight": "600",
        "marginBottom": 6,
        "marginTop": 14,
      }
    }
  >
    Window 
    <Text
      style={
        {
          "color": "rgba(43,48,56,0.72)",
          "fontSize": 11,
          "fontWeight": "400",
        }
      }
    >
      optional, the dock slot if there is one
    </Text>
  </Text>
  <TextInput
    onChangeText={[Function]}
    placeholder="07:00-11:00"
    placeholderTextColor="rgba(43,48,56,0.72)"
    style={
      [
        {
          "backgroundColor": "#ECEDE9",
          "borderColor": "#D7DAD4",
          "borderRadius": 10,
          "borderWidth": 1,
          "color": "#2B3038",
          "fontSize": 15,
          "paddingHorizontal": 14,
          "paddingVertical": 12,
        },
        false,
      ]
    }
    testID="delivery-window"
    value=""
  />
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#2F6B3A",
        "borderRadius": 14,
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "center",
        "marginTop": 20,
        "minHeight": 50,
        "opacity": 0.45,
      }
    }
    testID="delivery-save"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      fill="none"
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#FFFFFF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={1.75}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={1.75}
      >
        <RNSVGPath
          d="M8 2v4"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
        <RNSVGPath
          d="M16 2v4"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
        <RNSVGRect
          fill={null}
          height="18"
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          rx="2"
          stroke={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
          width="18"
          x="3"
          y="4"
        />
        <RNSVGPath
          d="M3 10h18"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
        <RNSVGPath
          d="M8 14h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
        <RNSVGPath
          d="M12 14h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
        <RNSVGPath
          d="M16 14h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
        <RNSVGPath
          d="M8 18h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
        <RNSVGPath
          d="M12 18h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
        <RNSVGPath
          d="M16 18h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 14,
          "fontWeight": "700",
        }
      }
    >
      Add to the Look-Ahead
    </Text>
  </View>
</View>
`;
